deploy/app/k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nx-app
  labels:
    app: nx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nx-app
  template:
    metadata:
      labels:
        app: nx-app
    spec:
      containers:
      - name: nx-container
        image: redistestreg.azurecr.io/nx-app:test # Replace with the NX App Image
        ports:
        - containerPort: 3000
