deploy/app/k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nx-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-app.local  # Replace with your domain or use a local host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nx-app-service
            port:
              number: 80
